[skip travis] fix branch

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -3,7 +3,7 @@
 name: Build and Test GATK 4
 on:
   push:
-    branches: [master]
+    branches: [lb_github_actions]
   pull_request:
   workflow_dispatch:
 
