--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -84,10 +84,11 @@ jobs:
   wdlGen:
     runs-on: ubuntu-latest
     name: Test WDL Generation
-    env:
-      CROMWELL_JAR: ${{github.workspace}}/cromwell-${{ env.CROMWELL_VERSION }}.jar
-      WOMTOOL_JAR: ${{github.workspace}}/womtool-${{ env.CROMWELL_VERSION }}.jar
     steps:
+      - name: Set Cromwell env variables
+        run |
+          echo "CROMWELL_JAR=${HOME}/cromwell-${CROMWELL_VERSION}.jar" >> $GITHUB_ENV;
+          echo "WOMTOOL_JAR=${HOME}/womtool-${CROMWELL_VERSION}.jar;
       - name: Download Cromwell and Womtools
         run: |
           wget -O $CROMWELL_JAR https://github.com/broadinstitute/cromwell/releases/download/${CROMWELL_VERSION}/cromwell-${CROMWELL_VERSION}.jar;
