--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -39,7 +39,7 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     env:
       TEST_TYPE: ${{ matrix.testType }}
-      SCALA_VERSION: ${{ matrix.testType }}
+      SCALA_VERSION: ${{ matrix.scalaVersion }}
 
     name: Java ${{ matrix.Java }} build and test ${{matrix.testType}}
     steps:
@@ -65,12 +65,12 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
           project_id: ${{ env.HELLBENDER_TEST_PROJECT }}
+          export_default_credentials: true
           credentials_file_path: ${{ env.HELLBENDER_JSON_SERVICE_ACCOUNT_KEY}}
 
 
       - name: 'Set up Cloud SDK'
         uses: google-github-actions/setup-gcloud@v0
-
 
       - name: Run tests
         run: ./gradlew test jacocoTestReport
@@ -82,7 +82,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: test-results-${{ matrix.Java }}
+          name: test-results-${{ matrix.Java }}-${{ matrix.testType }}
           path: build/reports/tests
 
   wdlGen:
@@ -92,7 +92,7 @@ jobs:
       - name: Set Cromwell env variables
         run: |
           echo "CROMWELL_JAR=${HOME}/cromwell-${CROMWELL_VERSION}.jar" >> $GITHUB_ENV;
-          echo "WOMTOOL_JAR=${HOME}/womtool-${CROMWELL_VERSION}.jar";
+          echo "WOMTOOL_JAR=${HOME}/womtool-${CROMWELL_VERSION}.jar" >> $GITHUB_ENV;
       - name: Download Cromwell and Womtools
         run: |
           wget -O $CROMWELL_JAR https://github.com/broadinstitute/cromwell/releases/download/${CROMWELL_VERSION}/cromwell-${CROMWELL_VERSION}.jar;
