--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -17,7 +17,39 @@ env:
   HELLBENDER_TEST_PROJECT: broad-dsde-dev
   HELLBENDER_JSON_SERVICE_ACCOUNT_KEY: servicekey.json
   TEST_VERBOSITY: minimal
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
+  buildDocker:
+    name: build docker images
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout gatk
+        uses: actions/checkout@v2
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value={{github.sha}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -68,7 +100,6 @@ jobs:
           export_default_credentials: true
           credentials_file_path: ${{ env.HELLBENDER_JSON_SERVICE_ACCOUNT_KEY}}
 
-
       - name: 'Set up Cloud SDK'
         uses: google-github-actions/setup-gcloud@v0
 
@@ -84,6 +115,76 @@ jobs:
         with:
           name: test-results-${{ matrix.Java }}-${{ matrix.testType }}
           path: build/reports/tests
+
+  testOnDocker:
+    needs: buildDocker
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ 8 ]
+        experimental: [ false ]
+        scalaVersion: [ 2.11 ]
+        testType: [ integration, unit, variantcalling, conda ]
+      fail-fast: false
+    continue-on-error: ${{ matrix.experimental }}
+    env:
+      TEST_TYPE: ${{ matrix.testType }}
+      SCALA_VERSION: ${{ matrix.scalaVersion }}
+
+    name: Java ${{ matrix.Java }} test on docker  ${{matrix.testType}}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: 'Set up java ${{ matrix.Java }}'
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.Java }}
+          distribution: 'adopt'
+          cache: gradle
+
+      - name: set up test folders
+        run: |
+          sudo ./gradlew clean shadowTestClassJar shadowTestJar;
+          mkdir ./testJars;
+          echo $( find ./build/libs/ -name "gatk*test.jar");
+          cp -r $( find ./build/libs/ -name "gatk*test.jar" ) ./testJars;
+          cp -r $( find ./build/libs/ -name "gatk*testDependencies.jar" ) ./testJars;
+          mkdir -p build/reports/;
+          chmod -R a+w build/reports/;
+          cp scripts/docker/dockertest.gradle .;
+
+      - name: pull docker
+        run: docker pull ${ REGISTRY }/${ IMAGE_NAME }}:${GITHUB_SHA}
+
+      - name: run docker tests
+        run:  |
+          sudo docker run \
+            -v $(pwd):/gatkCloneMountPoint:cached \
+            -v $(pwd)/testJars:/jars:cached \
+            --rm \
+            -e "scala.version=${SCALA_VERSION}" \
+            -e "TEST_VERBOSITY=minimal" \
+            -e "TEST_TYPE=${TEST_TYPE}" \
+            -t ${ IMAGE_NAME }}:${GITHUB_SHA} \
+            bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh;
+          TEST_EXIT_VALUE=$?;
+          sudo mkdir build/reports/tests/test \
+           && sudo cp -rp build/reports/tests/testOnPackagedReleaseJar/* build/reports/tests/test \
+           && sudo rm -r build/reports/tests/testOnPackagedReleaseJar;
+
+      - name: Upload to codecov
+        run: bash <(curl -s https://raw.githubusercontent.com/broadinstitute/codecov-bash-uploader/main/codecov-verified.bash)
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results-${{ matrix.Java }}-${{ matrix.testType }}
+          path: build/reports/tests
+      echo docker run ${REMOVE_CONTAINER_STRING} -v  ${STAGING_ABSOLUTE_PATH}:/gatkCloneMountPoint -v  ${STAGING_ABSOLUTE_PATH}/testJars:/jars -t ${REPO_PRJ}:${GITHUB_TAG} bash /root/run_unit_tests.sh
+      docker run ${REMOVE_CONTAINER_STRING} -v  ${STAGING_ABSOLUTE_PATH}:/gatkCloneMountPoint -v  ${STAGING_ABSOLUTE_PATH}/testJars:/jars -t ${REPO_PRJ}:${GITHUB_TAG} bash /root/run_unit_tests.sh
 
   wdlGen:
     runs-on: ubuntu-latest
