--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -157,7 +157,7 @@ jobs:
 
       - name: pull docker
        # run: docker pull ${ REGISTRY }/${ IMAGE_NAME }}:${GITHUB_SHA}
-      docker pull ${ REGISTRY }/broadinstitute/gatk:0cfdca57613dcceedf5dc049a2318f5b268f3f9b
+        run: docker pull ${ REGISTRY }/broadinstitute/gatk:0cfdca57613dcceedf5dc049a2318f5b268f3f9b
       - name: run docker tests
         run:  |
           docker run \
