--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -160,14 +160,15 @@ jobs:
           cp -r $( find ./build/libs/ -name "gatk*testDependencies.jar" ) ./testJars;
           mkdir -p build/reports/;
           chmod -R a+w build/reports/;
-          cp scripts/docker/dockertest.gradle .;
-
-      - name: pull lfs files
-        run: git lfs pull
+          cp scripts/docker/dockertest.gradle .
 
       - name: pull docker
        # run: docker pull ${ REGISTRY }/${ IMAGE_NAME }}:${GITHUB_SHA}
         run: docker pull "$REGISTRY/broadinstitute/gatk:0cfdca57613dcceedf5dc049a2318f5b268f3f9b"
+
+      - name: pull lfs files
+        run: git lfs pull
+
       - name: run docker tests
         run:  |
           docker run \
