update dockstore for new branch

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -88,7 +88,7 @@ workflows:
        branches:
          - master
          - ah_var_store
-         - rc-thread-in-dataset-name
+         - rc-clean-up-temp-tables
    - name: GvsCreateAltAllele
      subclass: WDL
      primaryDescriptorPath: /scripts/variantstore/wdl/GvsCreateAltAllele.wdl
