--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -161,7 +161,7 @@ jobs:
           cp scripts/docker/dockertest.gradle .
 
       - name: pull docker
-        run: docker pull ${ REGISTRY }/${ IMAGE_NAME }}:${GITHUB_SHA}
+        run: docker pull ${ REGISTRY }/${ IMAGE_NAME }:${GITHUB_SHA}
       # run: docker pull "$REGISTRY/broadinstitute/gatk:0cfdca57613dcceedf5dc049a2318f5b268f3f9b"
 
       - name: pull lfs files
