--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -39,6 +39,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=${{github.sha}}
+            type=raw,value=broadinstitute/gatk-nightly:latest;
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
@@ -161,7 +162,7 @@ jobs:
           cp scripts/docker/dockertest.gradle .
 
       - name: pull docker
-        run: docker pull ${ REGISTRY }/${ IMAGE_NAME }:${GITHUB_SHA}
+        run: docker pull ${{ REGISTRY }}/${{ IMAGE_NAME }}:${{ GITHUB_SHA }}
       # run: docker pull "$REGISTRY/broadinstitute/gatk:0cfdca57613dcceedf5dc049a2318f5b268f3f9b"
 
       - name: pull lfs files
