--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -161,7 +161,7 @@ jobs:
           cp scripts/docker/dockertest.gradle .
 
       - name: pull docker
-        run: docker pull ${{ REGISTRY }}/${{ IMAGE_NAME }}:${{ GITHUB_SHA }}
+        run: docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
       # run: docker pull "$REGISTRY/broadinstitute/gatk:0cfdca57613dcceedf5dc049a2318f5b268f3f9b"
 
       - name: pull lfs files
@@ -176,7 +176,7 @@ jobs:
             -e "scala.version=${SCALA_VERSION}" \
             -e "TEST_VERBOSITY=minimal" \
             -e "TEST_TYPE=${TEST_TYPE}" \
-            -t ${ IMAGE_NAME }}:${GITHUB_SHA} \
+            -t ${ env.IMAGE_NAME }}:${GITHUB_SHA} \
             bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh;
           TEST_EXIT_VALUE=$?;
           $( exit ${TEST_EXIT_VALUE} );
