--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -120,13 +120,12 @@ jobs:
           path: build/reports/tests
 
       - name: Report failure Logs to PR
-        if: !${{ TEST_EXIT_VALUE }}
         run: |
           $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
           echo "See the test report at https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
         run:
           pip install --user PyGithub;
           python scripts/travis/Reporter.py https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
@@ -208,13 +207,12 @@ jobs:
           path: build/reports/tests
 
       - name: Report failure Logs to PR
-        if: !${{ TEST_EXIT_VALUE }}
         run: |
           $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
           echo "See the test report at https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
         run:
           pip install --user PyGithub;
           python scripts/travis/Reporter.py https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
