--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -121,14 +121,14 @@ jobs:
 
       - name: Report failure Logs to PR
         run: |
-          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
-          echo "See the test report at https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
+          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
+          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
         if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
         run:
           pip install --user PyGithub;
-          python scripts/travis/Reporter.py https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
+          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
 
 
   testOnDocker:
@@ -208,14 +208,14 @@ jobs:
 
       - name: Report failure Logs to PR
         run: |
-          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
-          echo "See the test report at https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
+          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
+          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
         if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
         run:
           pip install --user PyGithub;
-          python scripts/travis/Reporter.py https://storage.googleapis.com${{ HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
+          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
 
   wdlGen:
     runs-on: ubuntu-latest
@@ -223,12 +223,12 @@ jobs:
     steps:
       - name: Set Cromwell env variables
         run: |
-          echo "CROMWELL_JAR=${HOME}/cromwell-${CROMWELL_VERSION}.jar" >> $GITHUB_ENV;
-          echo "WOMTOOL_JAR=${HOME}/womtool-${CROMWELL_VERSION}.jar" >> $GITHUB_ENV;
+          echo "CROMWELL_JAR=${HOME}/cromwell-${{ env.CROMWELL_VERSION }}.jar" >> $GITHUB_ENV;
+          echo "WOMTOOL_JAR=${HOME}/womtool-${{ env.CROMWELL_VERSION }}.jar" >> $GITHUB_ENV;
       - name: Download Cromwell and Womtools
         run: |
-          wget -O $CROMWELL_JAR https://github.com/broadinstitute/cromwell/releases/download/${CROMWELL_VERSION}/cromwell-${CROMWELL_VERSION}.jar;
-          wget -O $WOMTOOL_JAR https://github.com/broadinstitute/cromwell/releases/download/${CROMWELL_VERSION}/womtool-${CROMWELL_VERSION}.jar;
+          wget -O $CROMWELL_JAR https://github.com/broadinstitute/cromwell/releases/download/${{ env.CROMWELL_VERSION }}/cromwell-${{ env.CROMWELL_VERSION }}.jar;
+          wget -O $WOMTOOL_JAR https://github.com/broadinstitute/cromwell/releases/download/${{ env.CROMWELL_VERSION }}/womtool-${{ env.CROMWELL_VERSION }}.jar;
 
       - uses: actions/checkout@v2
         with:
