--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -17,6 +17,7 @@ env:
   TEST_VERBOSITY: minimal
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  REPORT_PATH: ${{ github.ref_name }}_${{ github.run_number }}
 
 jobs:
   buildDocker:
@@ -121,14 +122,14 @@ jobs:
 
       - name: Report failure Logs to PR
         run: |
-          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
-          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
+          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
+          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
         if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
         run:
           pip install --user PyGithub;
-          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
+          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
 
 
   testOnDocker:
@@ -208,14 +209,14 @@ jobs:
 
       - name: Report failure Logs to PR
         run: |
-          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/;
-          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html";
+          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
+          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
         if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
         run:
           pip install --user PyGithub;
-          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ REPORT_PATH }}/tests/test/index.html;
+          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
 
   wdlGen:
     runs-on: ubuntu-latest
