--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -207,13 +207,13 @@ jobs:
           name: test-results-${{ matrix.Java }}-${{ matrix.testType }}
           path: build/reports/tests
 
-      - name: Report failure Logs to PR
+      - name: Upload Reports
         run: |
           $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
           echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
 
       - name: Updating the PR travis results
-        if: github.event_name == 'pull_request' && !${{ TEST_EXIT_VALUE }}
+        if: github.event_name == 'pull_request' && failure()
         run:
           pip install --user PyGithub;
           python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
