--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -13,7 +13,6 @@ env:
   HELLBENDER_TEST_STAGING: gs://hellbender-test-logs/staging/
   HELLBENDER_TEST_LOGS: /hellbender-test-logs/build_reports/
   HELLBENDER_TEST_PROJECT: broad-dsde-dev
-  HELLBENDER_JSON_SERVICE_ACCOUNT_KEY: servicekey.json
   TEST_VERBOSITY: minimal
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -95,8 +94,10 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
           project_id: ${{ env.HELLBENDER_TEST_PROJECT }}
-          export_default_credentials: true
-          credentials_file_path: ${{ env.HELLBENDER_JSON_SERVICE_ACCOUNT_KEY}}
+          create_credentials_file: true
+
+      - env:
+          HELLBENDER_JSON_SERVICE_ACCOUNT_KEY:  auth.credentials_file_path
 
       - name: 'Set up Cloud SDK'
         uses: google-github-actions/setup-gcloud@v0
@@ -189,7 +190,7 @@ jobs:
             -e "scala.version=${SCALA_VERSION}" \
             -e "TEST_VERBOSITY=minimal" \
             -e "TEST_TYPE=${TEST_TYPE}" \
-            -t ${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh;
           TEST_EXIT_VALUE=$?;
           $( exit ${TEST_EXIT_VALUE} );
