more auth stuff

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -96,8 +96,8 @@ jobs:
           project_id: ${{ env.HELLBENDER_TEST_PROJECT }}
           create_credentials_file: true
 
-      - env:
-          HELLBENDER_JSON_SERVICE_ACCOUNT_KEY:  auth.credentials_file_path
+      - name: "export the "
+        run: echo "HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=${{ auth.credentials_file_path }}" >> $GITHUB_ENV
 
       - name: 'Set up Cloud SDK'
         uses: google-github-actions/setup-gcloud@v0
