--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -96,7 +96,7 @@ jobs:
           project_id: ${{ env.HELLBENDER_TEST_PROJECT }}
           create_credentials_file: true
 
-      - name: "export the "
+      - name: "export the credentials for GATK tests"
         run: echo "HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=${{ steps.auth.outputs.credentials_file_path }}" >> $GITHUB_ENV
 
       - name: 'Set up Cloud SDK'
@@ -121,12 +121,12 @@ jobs:
           name: test-results-nodocker-${{ matrix.Java }}-${{ matrix.testType }}
           path: build/reports/tests
 
-      - name: Report failure Logs to PR
+      - name: Updating the PR travis results
         run: |
-          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
+          gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
           echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
 
-      - name: Updating the PR travis results
+      - name: Report failure Logs to PR
         if: github.event_name == 'pull_request' && failure()
         run:
           pip install --user PyGithub;
