experimenting with no code duplicateion

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -111,26 +111,26 @@ jobs:
       - name: Run tests
         run: ./gradlew test jacocoTestReport
 
-      - name: Upload to codecov
-        run: bash <(curl -s https://raw.githubusercontent.com/broadinstitute/codecov-bash-uploader/main/codecov-verified.bash)
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results-nodocker-${{ matrix.Java }}-${{ matrix.testType }}
-          path: build/reports/tests
-
-      - name: Updating the PR travis results
-        run: |
-          gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
-          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
-
-      - name: Report failure Logs to PR
-        if: github.event_name == 'pull_request' && failure()
-        run:
-          pip install --user PyGithub;
-          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
+#      - name: Upload to codecov
+#        run: bash <(curl -s https://raw.githubusercontent.com/broadinstitute/codecov-bash-uploader/main/codecov-verified.bash)
+#
+#      - name: Upload test results
+#        if: always()
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: test-results-nodocker-${{ matrix.Java }}-${{ matrix.testType }}
+#          path: build/reports/tests
+#
+#      - name: Updating the PR travis results
+#        run: |
+#          gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
+#          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
+#
+#      - name: Report failure Logs to PR
+#        if: github.event_name == 'pull_request' && failure()
+#        run:
+#          pip install --user PyGithub;
+#          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
 
 
   testOnDocker:
@@ -198,6 +198,32 @@ jobs:
            && cp -rp build/reports/tests/testOnPackagedReleaseJar/* build/reports/tests/test \
            && rm -r build/reports/tests/testOnPackagedReleaseJar;
 
+#      - name: Upload to codecov
+#        run: bash <(curl -s https://raw.githubusercontent.com/broadinstitute/codecov-bash-uploader/main/codecov-verified.bash)
+#
+#      - name: Upload test results
+#        if: always()
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: test-results-${{ matrix.Java }}-${{ matrix.testType }}
+#          path: build/reports/tests
+#
+#      - name: Upload Reports
+#        run: |
+#          $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
+#          echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
+#
+#      - name: Updating the PR travis results
+#        if: github.event_name == 'pull_request' && failure()
+#        run:
+#          pip install --user PyGithub;
+#          python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
+
+  bookKeeping:
+    needs: [testOnDocker,  test]
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
       - name: Upload to codecov
         run: bash <(curl -s https://raw.githubusercontent.com/broadinstitute/codecov-bash-uploader/main/codecov-verified.bash)
 
@@ -218,6 +244,7 @@ jobs:
         run:
           pip install --user PyGithub;
           python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
+
 
   wdlGen:
     runs-on: ubuntu-latest
