--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -288,25 +288,25 @@ jobs:
         wdlTest: [ RUN_CNV_GERMLINE_COHORT_WDL, RUN_CNV_GERMLINE_CASE_WDL, RUN_CNV_SOMATIC_WDL, RUN_M2_WDL, RUN_CNN_WDL ]
     steps:
       - name: "CNV_GERMLINE_COHORT_WDL_TEST"
-        if: wdl == RUN_CNV_GERMLINE_COHORT_WDL
+        if: ${{ matrix.wdlTest }} == RUN_CNV_GERMLINE_COHORT_WDL
         run: |
           echo "Running CNV germline cohort workflow";
           bash scripts/cnv_cromwell_tests/germline/run_cnv_germline_workflows.sh COHORT;
 
       - name: "CNV_GERMLINE_CASE_WDL_TEST"
-        if: wdl == RUN_CNV_GERMLINE_CASE_WDL
+        if: ${{ matrix.wdlTest }} == RUN_CNV_GERMLINE_CASE_WDL
         run: |
           echo "Running CNV germline case workflow";
           bash scripts/cnv_cromwell_tests/germline/run_cnv_germline_workflows.sh CASE;
 
       - name: "CNV_SOMATIC_WDL_TEST"
-        if: wdl == RUN_CNV_SOMATIC_WDL
+        if: ${{ matrix.wdlTest }} == RUN_CNV_SOMATIC_WDL
         run: |
           echo "Running CNV somatic workflows";
           bash scripts/cnv_cromwell_tests/somatic/run_cnv_somatic_workflows.sh;
 
       - name: "M2_WDL_TEST"
-        if: wdl == RUN_M2_WDL
+        if: ${{ matrix.wdlTest }} == RUN_M2_WDL
         run: |
           echo "Deleting some unused files before running M2 WDL...";
           rm -Rf src/test/resources/large/VQSR;
@@ -314,7 +314,7 @@ jobs:
           sudo bash scripts/m2_cromwell_tests/run_m2_wdl.sh;
 
       - name: "CNN_WDL_TEST"
-        if: wdl == RUN_CNN_WDL
+        if: ${{ matrix.wdlTest }} == RUN_CNN_WDL
         run: |
           echo "Running CNN WDL";
           sudo bash scripts/cnn_variant_cromwell_tests/run_cnn_variant_wdl.sh;
